[metadata]
name = pyprost
version = 0.2.15
author = Mesih Kilinc
author_email = mesih@iastate.edu
description = PRotein Ortholog Search Tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mesihk/prost
project_urls =
    Bug Tracker = https://github.com/mesihk/prost/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License 
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
scripts =
    bin/prost.py
install_requires =
    numpy
    scipy
    click
    blosc
    torch
    fair-esm             
    statsmodels

[options.packages.find]
where = src
